--- a/app/templates/editeur.html
+++ b/app/templates/editeur.html
@@ -7,6 +7,7 @@
         <title>PageDépart - Créez votre page de départ personnalisée</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
     </head>
 
     <body>
